<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">About</string>
    <string name="label_home">Dicoding Event</string>
    <string name="label_upcoming">Upcoming Events</string>
    <string name="label_finished">Finished Events</string>
    <string name="label_favorite">Favorite Events</string>
    <string name="label_settings">About</string>
    <string name="event_date_same_day">%1$s | %2$s - %3$s WIB</string>
    <string name="event_date_different_day">%1$s | %2$s - %3$s | %4$s WIB</string>
    <string name="event_image_logo">Event Image Logo</string>
    <string name="back_button">Back Button</string>
    <string name="event_detail">Event Detail</string>
    <string name="owner_name">Penyelenggara:</string>
    <string name="category">Kategori:</string>
    <string name="date">Waktu:</string>
    <string name="city_name">Lokasi:</string>
    <string name="quota">Sisa Kuota:</string>
    <string name="description">Deskripsi:</string>
    <string name="go_to_website">Go To The Website</string>
    <string name="no_result_keyword">The Event You Are Looking For Is Not Available</string>
    <string name="failed_to_load_data">Failed To Load Data From Server</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_favorite_event">Your Favorite Events List Is Still Empty</string>
    <string name="success_save_to_favorite">Event Successfully Added To Favorites List</string>
    <string name="success_remove_from_favorite">Event Successfully Removed From Favorites List</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="notification_content_text">Will Be Held on The Day %1$s | %2$s WIB</string>
    <string name="notification_subtext">Reminder</string>
</resources>