<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentHome"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/fragmentUpcoming"
        android:icon="@drawable/upcoming"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/fragmentFinished"
        android:icon="@drawable/finished"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/fragmentFavorite"
        android:icon="@drawable/bookmark_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/fragmentSettings"
        android:icon="@drawable/profile"
        android:title="@string/title_settings" />
</menu>