<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/base_color"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            android:padding="4dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/event_detail"
            android:textColor="@color/component_secondary_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/cv_button"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_color">

            <ImageView
                android:id="@+id/iv_event_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/event_image_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="16dp"
                android:textColor="@color/card_content_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_event_image"
                tools:text="Judul Event" />

            <View
                android:id="@+id/view_first_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/component_secondary_color"
                app:layout_constraintTop_toBottomOf="@id/tv_event_title" />

            <TextView
                android:id="@+id/tv_event_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/owner_name"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_event_owner_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_first_line" />

            <TextView
                android:id="@+id/tv_event_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_event_owner"
                app:layout_constraintTop_toBottomOf="@id/view_first_line"
                tools:text="Owner Name" />

            <TextView
                android:id="@+id/tv_event_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/category"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_event_category_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_owner_name" />

            <TextView
                android:id="@+id/tv_event_category_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_event_category"
                app:layout_constraintTop_toBottomOf="@id/tv_event_owner_name"
                tools:text="Category" />

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/date"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_event_date_begin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_category_name" />

            <TextView
                android:id="@+id/tv_event_date_begin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_event_date"
                app:layout_constraintTop_toBottomOf="@id/tv_event_category_name"
                tools:text="Begin Time" />

            <TextView
                android:id="@+id/tv_event_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/city_name"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_event_city_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_date_begin" />

            <TextView
                android:id="@+id/tv_event_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_event_city"
                app:layout_constraintTop_toBottomOf="@id/tv_event_date_begin"
                tools:text="City Name" />

            <TextView
                android:id="@+id/tv_event_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/quota"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_event_quota_remaining"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_city_name" />

            <TextView
                android:id="@+id/tv_event_quota_remaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_event_quota"
                app:layout_constraintTop_toBottomOf="@id/tv_event_city_name"
                tools:text="Quota Remaining" />

            <View
                android:id="@+id/view_second_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/component_secondary_color"
                app:layout_constraintTop_toBottomOf="@id/tv_event_quota" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/description"
                android:textColor="@color/card_content_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_second_line" />

            <TextView
                android:id="@+id/tv_event_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:paddingBottom="32dp"
                android:textColor="@color/card_content_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_description"
                tools:text="Event Description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardBackgroundColor="@color/base_color"
        app:cardElevation="20dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/blue_button"
                android:fontFamily="@font/lato_bold"
                android:text="@string/go_to_website"
                android:textAllCaps="false"
                android:textColor="@color/component_content_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ib_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:src="@drawable/unfavorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/register_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_failed_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/failed_to_load_data"
        android:textColor="@color/component_secondary_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminateTint="@color/component_primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>